@@ -17,6 +17,8 @@ AC_PROG_CXX
 AC_PROG_CXXCPP
 AM_PROG_LIBTOOL
 
+# check whether hash_map is available
+AC_CXX_HAVE_EXT_HASH_MAP
 
 # check path for installation of bank data
 AC_MSG_CHECKING(bankdata path)
